@@ -16,10 +16,14 @@
     <div class="wiki" style="display: block;">Then uncompress the file you have
       downloaded, a zip or a tar.gz file, in any folder of your computer. </div>
     <div class="wiki" style="display: block;">Finally, execute <i>openxava.exe</i>
-      (for Windows), or <i>openxava</i> (for Linux and Mac). In the Mac case
-      maybe you Mac refuses to execute it when you click on it, in that case
-      open a shell and type the command <i>./openxava</i>. You can find this
-      file in the root of the folder where you have uncompressed OpenXava.</div>
+      (for Windows), or <i>openxava</i> (for Linux and Mac). </div>
+    <div class="wiki" style="display: block;">In the Mac case maybe you Mac
+      refuses to execute it when you click on it, in that case open a shell and
+      type the command <i>./openxava</i>. You can find this file in the root of
+      the folder where you have uncompressed OpenXava. If it still doesn't work
+      on Mac, try copying the <i>openxava </i>folder to a folder other than <i>Desktop</i>,
+      <i>Downloads</i>, or <i>Documents</i>. It should work in the home
+      directory or a subdirectory of the home directory.</div>
     <div class="wiki" style="display: block;">For versions previous to 6.4 you
       don't have <i>openxava.bat/sh</i>, instead open the <i>quick-start.html</i>
       with your browser and follow its instructions.</div>
