@@ -17,10 +17,15 @@
       has descargado, un zip o un tar.gz, en cualquier carpeta de tu ordenador.
     </div>
     <div class="wiki" style="display: block;">Finalmente, ejecuta <i>openxava.exe</i>
-      (para Windows) u <i>openxava</i> (para Linux y Mac). En el caso del Mac
-      puede que tu Mac se niege a ejecutarlo al hacer click, en ese caso abre
-      una ventana de comandos y teclea <i>./openxava</i>. Puedes encontrar este
-      archivo en la raíz de la carpeta dondes has descomprimido OpenXava.</div>
+      (para Windows) u <i>openxava</i> (para Linux y Mac). </div>
+    <div class="wiki" style="display: block;">En el caso del Mac puede que tu
+      Mac se niege a ejecutarlo al hacer click, en ese caso abre una ventana de
+      comandos y teclea <i>./openxava</i>. Puedes encontrar este archivo en la
+      raíz de la carpeta dondes has descomprimido OpenXava. Si todavía no
+      funciona en Mac prueba copiar la carpeta de <i>openxava</i> a una carpeta
+      que no sea <i>Escritorio</i>, <i>Descargas </i>o <i>Documents</i>, en
+      el directorio home o un subdirectorio del directorio home debería
+      funcionar.</div>
     <div class="wiki" style="display: block;">Para versiones anteriores a las
       6.4 no tienes <i>openxava.bat/sh</i>, en su lugar abre <i>quick-start.html</i>
       con un navegador y sigue sus instrucciones.</div>
